# hur-mkdocs-single

./: .gitignore  .gitlab-ci.yml  404.html  README.md  convert_toml2md.py  helpers.py  i18n.toml  index.html  mkdocs.yml  profile.toml  pyproject.toml
.github/workflows/: ci.yml
com.gitlab.gitlab_user/: index.html
docs/: index.md
docs/toml/: com.example.user.toml  com.gitlab.example_user.toml
search/: search_index.json
tags/: index.html
toml/: profile.toml
